# azura_rs

./: Cargo.toml  README.md  TODOLIST
src/: build.rs  conflict.rs  depends.rs  download.rs  extract.rs  file_type.rs  files.rs  get.rs  getconf.rs  index.rs  info.rs  install.rs  libs.rs  list.rs  main.rs  num_cpus.rs  package.rs  query.rs  remove.rs  update.rs
