[package]
name = "raw"
version = "0.1.0"
edition = "2024"

[dependencies]
ferris-says = "0.3.1"
reqwest = { version = "0.13.3", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
liblzma = "0.4"
bzip2 = "0.6.1"
zstd = "0.13.3"
walkdir = "2"
recursive_copy = "1.3.0"
indicatif = "0.18.4"
anyhow = "1.0"
rpm = "0.23.2"
question = "0.2.2"